--- a/前端工程/前端表单配置化.md
+++ b/前端工程/前端表单配置化.md
@@ -1,7 +1,7 @@
 ## 参考链接
-[前端配置化](https://juejin.cn/post/7098211898990002207)
-[Vue配置化表单](https://gitee.com/dai_xiang_tian/yc-config-form)
 
+ [前端配置化](https://juejin.cn/post/7098211898990002207)
+ [Vue 配置化表单](https://gitee.com/dai_xiang_tian/yc-config-form)
 
 本文从 **场景介绍** 、 **设计 & 实现** 、 **性能优化** 三个部分进行讲解。笔者当时的技术栈是 `vue2` + `element-ui`，文章案例也是（其实大家不必纠结于技术栈，掌握设计的思路和理念，什么框架都是一样的）。主要能解决的问题就是 **提高代码复用能力、提升开发效率**，特别是需要开发多个大型**表单系统**的，配置化可以极大的提升效率，让你上班摸鱼不再是梦想！为了早点下班，我们接着往下看吧！
 
@@ -18,7 +18,7 @@
 
 别看到截图好像表单项也就那样，根据右栏数起来共 40 + 个，但是这个只是初期版的，还有很多字段是没接进来的；而且很多表单项之间有联动、可增删，还有很多表单项是隐藏的
 
-相信你很难想象，其实你只要进行简单的配置，就能实现上图的界面。比如下图的 `js对象` 就是上图的其中几个表单项的配置： ![](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/9c62893aa6f74376911fce6bc53e1672~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp?)
+相信你很难想象，其实你只要进行简单的配置，就能实现上图的界面。比如下图的 `js 对象` 就是上图的其中几个表单项的配置： ![](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/9c62893aa6f74376911fce6bc53e1672~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp?)
 
 大家已经不难看出，**配置化思路**其实就是对表单项进行了**抽象**，制定了一份协议去描述每个表单项。具体对象中的每个属性有什么用，这个笔者稍后讲自己的设计思路时再详细介绍～
 
@@ -28,8 +28,8 @@
 
 **高复用、好维护**。是的，笔者用配置化方式开发表单，完完全全就是为了高复用、可维护性，然后提升开发效率，解放生产力。
 
-* 高复用：**相似的业务逻辑进行统一处理，复用在相似领域的业务场景**。如果说投放系统只需要接入一个渠道，那真的写 `template` 一把梭就完了。但事实上却不是这样的，当你接入了第一个 `facebook` ，你发现后面还有 `tiktok` 、 `巨量引擎` 、 `广点通` 等各种媒体渠道...
-* 可维护：**实现配置代替开发**。即使把配置抽离，交到非技术人员处，其根据协议一样能实现表单项的增删，完成业务。并不是把东西做出来就完事了。首先，渠道方会有新配置功能推出，这个是不可控的。其次，系统开发时并不是全字段接入，而是先接入业务方所需要的核心配置，所以后期会有很多接入新的字段需求。
+- 高复用：**相似的业务逻辑进行统一处理，复用在相似领域的业务场景**。如果说投放系统只需要接入一个渠道，那真的写 `template` 一把梭就完了。但事实上却不是这样的，当你接入了第一个 `facebook` ，你发现后面还有 `tiktok` 、 ` 巨量引擎 ` 、 ` 广点通 ` 等各种媒体渠道...
+- 可维护：**实现配置代替开发**。即使把配置抽离，交到非技术人员处，其根据协议一样能实现表单项的增删，完成业务。并不是把东西做出来就完事了。首先，渠道方会有新配置功能推出，这个是不可控的。其次，系统开发时并不是全字段接入，而是先接入业务方所需要的核心配置，所以后期会有很多接入新的字段需求。
 
 所以，怎么 **提升复用能力** ， 怎么让复杂的表单 **变得清晰好维护**，就是笔者的出发点的～
 
@@ -44,24 +44,23 @@
 2. label 表单项的名称 / 描述。
 3. formKey 字段名。我们提交数据到后段的字段名，比如 `form.name` 的 `'name'`
 4. value 存放表单值。表单上 `v-model` 所绑定的值
-5. options 配置项。比如配置 `multiple` 、 `disabled` 、 `是否显示` 等等
+5. options 配置项。比如配置 `multiple` 、 `disabled` 、 ` 是否显示 ` 等等
 
 好了，有了以上这些点，我们试着把案例中的 表单 1 用协议表达出来:
 
-```js
+```html
 <el-form-item label="活动名称" v-if="form.area === 'area1'">
   <el-input v-model="form.name"></el-input> 
 </el-form-item> 
 <el-form-item label="活动区域">
   <el-select v-model="form.area">...</el-input> 
 </el-form-item>
-复制代码
 
 ```
 
 我们可以用协议这样去描述它
 
-```js
+```jsx
 [
   {
     type: 'el-input',
@@ -85,7 +84,6 @@
     }
   }
 ]
-复制代码
 
 ```
 
@@ -95,7 +93,7 @@
 
 配置是有了，但是怎么把配置转换成我们真实的表单呢？如果直接开干，我想大部分可能会先这样下手，比如：
 
-```js
+```html
 <template>
   <el-form-item :label="props.label">
     <el-input 
@@ -113,44 +111,41 @@
     >...</el-select>
   </el-form-item>
 </template>
-复制代码
 
 ```
 
 好了，大家观察一下上面的 `template` 中，有没发现**很多冗余的代码**。如果我们需要给组件传入 `props` 比如例子中的 `disabled` 、 `multiple` ；控制 `v-if` 等等。。我们有多少个组件，这些重复的代码就要写多少次。如果以后有需要给所有组件传多一个 `props`，我们就要编辑 n 次～记住！我们配置化就是要提高效率的，所以这样是不行的～
 
-在此，笔者就建议编写 `render函数`。`render函数` 的场景 & 对应的好处，大家可以看看 [官方文档](https://link.juejin.cn?target=https%3A%2F%2Fcn.vuejs.org%2Fv2%2Fguide%2Frender-function.html "https://cn.vuejs.org/v2/guide/render-function.html") 对其的讲解～
+在此，笔者就建议编写 `render 函数`。`render 函数` 的场景 & 对应的好处，大家可以看看 [官方文档](https://link.juejin.cn?target=https%3A%2F%2Fcn.vuejs.org%2Fv2%2Fguide%2Frender-function.html "https://cn.vuejs.org/v2/guide/render-function.html") 对其的讲解～
 
-* 这里不会深入介绍 `render函数` ，如果还不知道的，大家只需要记住：`Vue` 只认 `render函数`，平时我们 `.vue文件` 写的 `template` ，经过编译之后就是 `render函数`
-* `render函数` 作用就是返回一个 `vNode`。我们 `vue2` 初始化项目时写的： `render (h) => h(App)`是不是就似曾相识了呢？
+- 这里不会深入介绍 `render 函数` ，如果还不知道的，大家只需要记住：`Vue` 只认 `render 函数`，平时我们 `.vue 文件` 写的 `template` ，经过编译之后就是 `render 函数`
+- `render 函数` 作用就是返回一个 `vNode`。我们 `vue2` 初始化项目时写的： `render (h) => h(App)` 是不是就似曾相识了呢？
 
-都说 **React** 写 `jsx` 比 **Vue** 写 `template` 更好写逻辑，那我们也用 `render函数` ，好写逻辑～ 😝 （当然，如果你对 render 函数不是特别熟悉，那么写 template 也是可以的）
+都说 **React** 写 `jsx` 比 **Vue** 写 `template` 更好写逻辑，那我们也用 `render 函数` ，好写逻辑～ 😝 （当然，如果你对 render 函数不是特别熟悉，那么写 template 也是可以的）
 
 接下来，我们看看，如何通过 render 函数，把我们的表单项做出来，以上述案例其中一个为例子：
 
-```js
+```html
 <el-form-item label="活动名称">
   <el-input v-model="form.name"></el-input> 
 </el-form-item>
-复制代码
 
 ```
 
 这一段要怎么通过 render 函数表述出来？根据官方文档，我们理清三个参数是什么就可以了：
 
-```js
+```jsx
 createElement(
   'div', // {String | Object | Function}，一个 HTML 标签名、组件选项对象，或者...
   {}, // 一个与模板中 attribute 对应的数据对象
   [] // {String | Array}，可以理解成时 children 节点
 )
-复制代码
 
 ```
 
 接着，我们直接开干：
 
-```js
+```html
 <script>
 export default {
   name: "FormItemDemo",
@@ -165,13 +160,11 @@ export default {
   }
 }
 </script>
-复制代码
-
 ```
 
-在 `App组件` 中引用这个 `FormItemDemo组件`，代码如下
+在 `App 组件` 中引用这个 `FormItemDemo 组件`，代码如下
 
-```
+```html
 <template>
   <div>
     <el-form label-width="100px">
@@ -188,13 +181,11 @@ export default {
   components: { FormItemDemo }
 }
 </script>
-复制代码
-
 ```
 
 这时候，页面上就出现了我们的 input 表单项 了 ![](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/f245fb6ebaeb4ad5a72bc4ccbe547008~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp?)
 
-初始工作已经做完了，接下来的就是让我们把 `render函数` 的一些动态数据用变量代替，跟我们的 `配置config` 结合起来。
+初始工作已经做完了，接下来的就是让我们把 `render 函数` 的一些动态数据用变量代替，跟我们的 `配置 config` 结合起来。
 
 ❗️❗️❗️注意，**render 函数很灵活**，第一个参数可以是**字符串、组件对象、function**。大家不要被 demo 所局限，很多场景是需要我们**定制一些组件**，然后应用到我们的配置化中，而不是直接使用 element-ui 的原生组件。笔者项目中用的组件都是经过业务场景封装后 export 出来的组件对象，再配置到 type 中，最后 render 函数接收的是一个组件对象，具备业务能力的组件。**因此，我们可以在自己实现的组件中定制自己的业务逻辑**。
 
@@ -206,7 +197,7 @@ export default {
 
 首先配置数据如下：
 
-```js
+```jsx
 export default [
   {
     type: 'el-input',
@@ -234,13 +225,11 @@ export default [
     ]
   }
 ]
-复制代码
-
 ```
 
 我们把 render 函数 改造后，变成这样
 
-```js
+```html
 <script>
 export default {
   name: "FormItemDemo",
@@ -271,13 +260,12 @@ export default {
   }
 }
 </script>
-复制代码
 
 ```
 
 接下来我们在 app 组件 中同时应用我们的 配置 + FormItemDemo 组件：
 
-```js
+```html
 <template>
   <div>
     <el-form label-width="100px">
@@ -300,8 +288,6 @@ export default {
   }
 }
 </script>
-复制代码
-
 ```
 
 这时候我们看下页面长什么样？
@@ -313,15 +299,15 @@ ok！！！实现了，接下来，我们只需要根据业务需求不断丰富
 ### 4. 丰富组件能力，实现业务
 
 1. 我们先来看**第一个**需求：
-    * 当活动区域的值为 “area1” 时， 活动名称才展示
+    - 当活动区域的值为 “area1” 时， 活动名称才展示
 
-分析一下这个需求，我们的 `input组件` 跟 `select组件` 联动，所以 `input组件` 要获取 `select组件` 的值，这时候，我们可以在 `app组件` 中，将整个 `config` 传入 `FormItemDemo组件`。
+分析一下这个需求，我们的 `input 组件` 跟 `select 组件` 联动，所以 `input 组件` 要获取 `select 组件` 的值，这时候，我们可以在 `app 组件` 中，将整个 `config` 传入 `FormItemDemo 组件`。
 
-再回看一下我们的配置，我们把显示隐藏的配置放在 `options.vIf` 中（这里笔者设计成了一个数组，因为碰到的业务经常存在一个表单会受到好几个表单值联动的），所以 `FormItemDemo组件` 需要用这个来判断是否执行本次 `render` 以此来实现 `v-if`。如图所示： ![](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/b46671ac2b19409585f912e36291bdba~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp?)
+再回看一下我们的配置，我们把显示隐藏的配置放在 `options.vIf` 中（这里笔者设计成了一个数组，因为碰到的业务经常存在一个表单会受到好几个表单值联动的），所以 `FormItemDemo 组件` 需要用这个来判断是否执行本次 `render` 以此来实现 `v-if`。如图所示： ![](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/b46671ac2b19409585f912e36291bdba~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp?)
 
 笔者用了一个 `computed` 去实现这个需求。大家可以不用仔细深入，只要知道 `componentShow` 的作用就是，找到联动的 `relationKey` 的 `config` 中的 `value` 值，判断是否跟配置的一致。
 
-```js
+```jsx
 computed: {
   componentShow () {
     const vIfArr = this.itemConfig?.options.vIf
@@ -335,8 +321,6 @@ computed: {
     return true
   }
 }
-复制代码
-
 ```
 
 模拟实现 `v-if`，只需要把上述计算属性在 render 的开头进行判断即可 ![](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/4ee47a6744b942319129ec55fa6e1fb2~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp?)
@@ -344,8 +328,8 @@ computed: {
 ok，直接看下结果！两个表单项之间的联动完成了 ![](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/b16332fa6f574855aecc7c15ca274bd3~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp?)
 
 2. 接下来的需求，大家自行思考下怎么实现即可。其实都是异曲同工的
-    * 控制 select 多选 、 单选
-    * 添加 filter 属性 ...
+    - 控制 select 多选 、 单选
+    - 添加 filter 属性 ...
 
 好了，这样子，基本上就大功告成了，只要我们把 `FormItemDemo` 的业务逻辑都实现了，后续不管开发 N 个表单系统，我们只需要配置就完事了，摸鱼也就是板上定钉的事情了～但是，一个优秀的前端，怎么能这么算了呢？我们好歹也要做一点优化是吧？
 
@@ -358,15 +342,15 @@ ok，直接看下结果！两个表单项之间的联动完成了 ![](https://p9
 
 没错，就如大家所见，**所有的属性都带上了 `getter` 和 `setter`，这意味着，他们都被初始化成了响应式的**。由于我们的业务是非常复杂的，所以当我们真的要用一个 `config` 去描述整个表单时，`config` 的规模远不止以上这么点，并且整个配置对象的层级可能还会比较深，如果这样的话就可能会有性能问题了。
 
-熟悉 `Vue2` 的同学都知道，初始化的时候，会对 `data` 做一个深度遍历添加 `get` 、 `set` 变成响应时数据，并且在组件执行 `render函数` 时，会访问到这些对象的属性。一旦访问到，就会触发 `data属性` 的依赖收集动作，如果无脑多的属性时，这个 `get方法` 将被无脑执行。
+熟悉 `Vue2` 的同学都知道，初始化的时候，会对 `data` 做一个深度遍历添加 `get` 、 `set` 变成响应时数据，并且在组件执行 `render 函数` 时，会访问到这些对象的属性。一旦访问到，就会触发 `data 属性` 的依赖收集动作，如果无脑多的属性时，这个 `get 方法` 将被无脑执行。
 
 这肯定不符合我们这种优秀的前端的作风的是吧？怎么搞，优化呗。思路我们也不自己想了，直接拿 **尤大** 的处理来耍吧哈哈哈。😝
 
-有深入看过 Vue2 源码的同学，对 `__ob__` 这个属性一定不陌生，上面截图也有这个属性，但是大家发现没，这个 `ob属性` 却没有对应的 `get` 、`set` 。让我们打开源码，看看 **尤大** 做了什么？
+有深入看过 Vue2 源码的同学，对 `__ob__` 这个属性一定不陌生，上面截图也有这个属性，但是大家发现没，这个 `ob 属性` 却没有对应的 `get` 、`set` 。让我们打开源码，看看 **尤大** 做了什么？
 
 首先，在进行响应式处理之前，调用了一个 `def` 的方法，这里 **第四个参数** 是没传的 ![](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/a8be156b8f534ddea90178750a1c2248~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp?)
 
-看看 def 的具体实现，其实就是重新定义这个对象的属性。由于没传 `enumerable`，所以此时 `__ob__`的 `enumerable` 为 `false` ![](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/db9b258a469f4799a9f72ad6e9b6c88a~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp?)
+看看 def 的具体实现，其实就是重新定义这个对象的属性。由于没传 `enumerable`，所以此时 `__ob__` 的 `enumerable` 为 `false` ![](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/db9b258a469f4799a9f72ad6e9b6c88a~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp?)
 
 这样有什么用？一句话概括就是**无法遍历到这个属性，后续响应式初始化时也会跳过这个属性**。不清楚的伙伴可以看看笔者写的一个 `demo` 来加深理解：
 
@@ -374,7 +358,7 @@ ok，直接看下结果！两个表单项之间的联动完成了 ![](https://p9
 
 没错，我们这里也是采用同样的方式对我们的 `config` 进行 **非响应式** 优化。其实整个 `config` 数据，我们只是需要保证 `value` 是响应式的即可，其他很多描述性数据都是大可不必的。那我们就把其他字段进行一个优化～
 
-```js
+```jsx
 // 优化函数
 function optimize (array) {
   return array.reduce((acc, cur) => {
@@ -387,8 +371,6 @@ function optimize (array) {
     return acc
   }, [])
 }
-复制代码
-
 ```
 
 具体就不展开介绍函数实现了，大家 get 到思路就 ok 了（有兴趣的可以细看一下）～
