--- a/小程序/小程序技术原理.md
+++ b/小程序/小程序技术原理.md
@@ -61,7 +61,7 @@ date created: 2021-12-09 22:57
 
 使用 `miniprogram-compiler` 转化 wxml 代码, 其中提供了 `miniprogramCompiler.wxmlToJs` 方法, 调用 `wcc` 编译器, 将wxml转换成JS代码, 返回 `$gwx` 函数, 然后调用生成一个类 Virtual DOM 对象.
 
-```js
+```jsx
 {
   "tag": "wx-page",
   "children": [
@@ -86,7 +86,7 @@ date created: 2021-12-09 22:57
 
 把讲述对象交给 WAWebview 渲染, 调用 `$gwx` 这个闭包函数, 对比数据版本, 将新数据进行合并, 返回新的 Virtual DOM 结构.
 
-```js
+```jsx
 {
   "tag": "wx-page",
   "children": [
