--- a/手撕代码/数组去重-手写实现.md
+++ b/手撕代码/数组去重-手写实现.md
@@ -2,7 +2,7 @@
 date created: 2021-12-09 22:57
 ---
 
-#编程题
+# 编程题
 
 # 实现数组去重
 
@@ -10,7 +10,7 @@ date created: 2021-12-09 22:57
 
 ## ES6方法: 使用数据结构集合
 
-```js
+```jsx
 const array = [1, 2, 3, 5, 1, 5, 9, 1, 2, 8]
 Array.from(new Set(array))
 // [1, 2, 3, 5, 9, 8]
@@ -18,7 +18,7 @@ Array.from(new Set(array))
 
 ## ES5方法: 使用map类型存储不重复的数字
 
-```js
+```jsx
 const array = [1, 2, 3, 5, 1, 5, 9, 1, 2, 8];
 
 uniqueArray(array); // [1, 2, 3, 5, 9, 8]
