--- a/浏览器&DOM HTML/浏览器事件.md
+++ b/浏览器&DOM HTML/浏览器事件.md
@@ -2,7 +2,7 @@
 date created: 2022-05-26 13:32
 ---
 
-#browser
+# browser
 
 ## 事件机制
 
@@ -30,13 +30,13 @@ DOM2 级规定的事件流包括三个阶段
 
 ### 冒泡和捕获
 
-1.  当处于目标阶段, 没有捕获与冒泡之分, 执行顺序会按照 `addEventListener` 的添加顺序决定, 先添加先执行
-2.  使用 `stopPropagation()` 取消事件传播时, 事件不会被传播给下一个节点, 但是, 同一节点上的其它 listener 不会受影响, 继续执行.
+1. 当处于目标阶段, 没有捕获与冒泡之分, 执行顺序会按照 `addEventListener` 的添加顺序决定, 先添加先执行
+2. 使用 `stopPropagation()` 取消事件传播时, 事件不会被传播给下一个节点, 但是, 同一节点上的其它 listener 不会受影响, 继续执行.
 
 > 如果想要同一节点的也不执行, 需要使用 `stopImmediatePropagation()`
 
-3.  `preventDefault()` 只是阻止默认行为, 跟 JS 的事件传播没有关系
-4.  一旦发起了 `preventDefault()` , 在之后传递下去的事件里面也会有效果
+3. `preventDefault()` 只是阻止默认行为, 跟 JS 的事件传播没有关系
+4. 一旦发起了 `preventDefault()` , 在之后传递下去的事件里面也会有效果
 
 ## 事件委托/事件代理
 
@@ -61,7 +61,7 @@ DOM2 级规定的事件流包括三个阶段
 - 主流使用 `event` 对象, 它有 `event.preventDefault()` 方法阻止默认行为
 - 如果使用的是 `element.on<event>` 方法, 那么直接返回 `false` 也同样有效
 
-```js
+```jsx
 // 兼容各种浏览器的阻止默认事件代码
 element.onclick = function(event) {
   event = event || window.event 
@@ -78,7 +78,7 @@ element.onclick = function(event) {
 
 处于页面交互的需要, 可能需要自己创建全新的事件行为. 我们可以使用内建的 `Event` 对象, 构造一个新的事件.
 
-```js
+```jsx
 let customEvent = new Event(type[, options]);
 ```
 
