--- a/算法/0 算法记录.md
+++ b/算法/0 算法记录.md
@@ -7,7 +7,7 @@ date updated: 2022-05-24 01:13
 
 ## 字符串：415. 字符串相加
 
-#算法 #leetcode
+# 算法 #leetcode
 **描述：给定两个字符串形式的非负整数** `**num1**` **和** `**num2**` **，计算它们的和。**
 
 模拟竖式计算方法，对齐末尾分别计算数位，超过 10 就进一位。需要注意两个数字位数不同的话就需要对较短的进行补零操作，解决两个数字位数不同的情况。
@@ -44,7 +44,7 @@ var addStrings = function(num1, num2) {
 
 有两种办法可以实现反转链表的操作：一是循环迭代每个节点并且把节点的 prev 和 next 指针通过第三方变量进行互换，二是使用递归， 需要注意 `head.next.next` 是指向它本身，还有反转的第一个 item 必须指向 null
 
-```js
+```jsx
 // 循环迭代方法
 var reverseList = (head) => {
   // 初始化前节点
