--- a/算法/算法-杨辉三角.md
+++ b/算法/算法-杨辉三角.md
@@ -24,11 +24,11 @@ date created: 2021-12-09 22:57
 
 ## 常规解法: 数学
 
-### 解一:
+### 解一
 
 利用杨辉三角的特性, 每一行的第 `i` 个值 = 上一行的第 `i - 1` 个 + 上一行的第 `i` 个
 
-```js
+```jsx
 var generate = (numRows) => {
   var ret = []; // 目标结果
   
@@ -48,11 +48,11 @@ var generate = (numRows) => {
 }
 ```
 
-### 解二:
+### 解二
 
 解一的风骚写法
 
-```js
+```jsx
 var generate = (numRows) => {
   retrun Array(numRows).fill().map((_, i, r) => 
     r[i] = Array(i + 1).fill(1).map((v, j) => {
@@ -66,6 +66,6 @@ var generate = (numRows) => {
 
 ## 进阶写法: 利用杨辉三角的对称性
 
-## 解一:
+## 解一
 
 杨辉三角的对称性表现为: 遍历每一行元素从两端到中间的 `j` 和 `i - j` 位是相等的, 所以可以同时赋值
