--- a/网络/缓存运用与最佳实践.md
+++ b/网络/缓存运用与最佳实践.md
@@ -3,7 +3,7 @@ date created: 2021-12-09 22:59
 date updated: 2021-12-17 11:59
 ---
 
-#Network
+# Network
 [[HTTP 缓存]]
 
 ## 浏览器的缓存策略
@@ -28,7 +28,7 @@ date updated: 2021-12-17 11:59
 
 - 通过在 ajax 请求时添加 header 属性
 
-```jsx
+```jsxx
 $.ajax({
     url : 'url',
     dataType : "json",
@@ -40,7 +40,7 @@ $.ajax({
 
 - 或者在请求中加入时间戳 ts 参数，
 
-```jsx
+```jsxx
 $.ajax({
       url:url,
       data:{
@@ -75,7 +75,7 @@ CDN 的全称是 Content Delivery Network，即 [内容分发网络**](https://l
 `<link rel="stylesheet" type="text/css" href="/file1"/>`
 `<link rel="stylesheet" type="text/css" href="/file2"/>`
 `<link rel="stylesheet" type="text/css" href="/file3"/>`
-`  合并==> `
+`合并==>`
 `<link rel="stylesheet" type="text/css" href="//??file1,file2,file3,…"/>`
 这个 /??file1,file2,file3,… 的 url 请求响应就是动态 combo 服务提供的，它的原理很简单，就是根据 url 找到对应的多个文件，合并成一个文件来响应请求，并将其缓存，以加快访问速度。
 
@@ -124,7 +124,7 @@ output:{
 对于不经常修改的静态资源，比如 Css，js，图片等，可以设置一个较长的过期的时间，或者至少加上 `Last-Modified/Etag` 来表示版本号 ，而对于 html 页面这种入口文件，不建议设置缓存。这样既能保证在静态资源不变了情况下，可以不重发请求或直接通过 `304` 避免重复下载，又能保证在资源有更新的，只要通过给资源增加时间戳或者更换路径，就能让用户访问最新的资源
 使用这些 HTTP 头：
 
-```
+```jsx
 Cache-Control: public, max-age=31536000  
 Expires: (一年后的今天)  
 ETag: (基于内容生成)  
@@ -137,7 +137,7 @@ Vary: Accept-Encoding
 针对应用程序私密性和新鲜度方面需求的不同，我们应该使用不同的缓存控制设置。
 对于非私密性和经常性变动的资源（想像一下股票信息），我们应该使用下面这些：
 
-```
+```jsx
 Cache-Control: public, max-age=0  
 Expires: (当前时间)  
 ETag: (基于内容生成)  
@@ -148,13 +148,13 @@ Vary: Accept-Encoding
 这些设置的效果是：这些资源可以被公开地（通过浏览器和代理服务器）缓存起来。每一次在浏览器使用这些资源之前，浏览器或者代理服务器会检查这些资源是否有更新的版本，如果有，就把它们下载下来。
 
 这样的设置需要注意，浏览器在重新检查资源时效性方面有一定的灵活性。典型的是，当用户点击了「返回／前进」按钮时，浏览器不会重新检查这些资源文件，而是直接使用缓存的版本。你如果需要更严格的控制，需要告知浏览器即使当用户点击了「返回／前进」按钮，也需要重新检查这些资源文件，那么可以使用：
-` Cache-Control: public, no-cache, no-store   `
+`Cache-Control: public, no-cache, no-store`
 不是所有的动态资源都会马上变成过时的资源。如果它们可以保持至少 5 分钟的时效，可以使用：
-` Cache-Control: public, max-age=300  `
+`Cache-Control: public, max-age=300`
 经过这样的设置，浏览器只会在 5 分钟之后才重新检查。在这之前，缓存的内容会被直接使用。如果在 5 分钟后，这些过时的内容需要严格控制，你可以添加 `must-revalidate` 字段：
-` Cache-Control: public, max-age=300, must-revalidate   `
+`Cache-Control: public, max-age=300, must-revalidate`
 对于私密或者针对用户的内容，需要把 public 替换为 private 以避免内容被代理缓存。
-` Cache-Control: private, …  `
+`Cache-Control: private, …`
 
 ### 减少对 Cookie 的依赖
 
