--- a/项目总结/多图站点性能优化.md
+++ b/项目总结/多图站点性能优化.md
@@ -131,7 +131,7 @@ Intersection Observer API 可用于异步观察目标元素与祖先元素或与
 
 Copy
 
-```js
+```jsx
 const config = {
   /** any option */
 };
@@ -177,7 +177,7 @@ images.forEach((image) => {
 
 一般常见方案是动态创建 Image 标签或者是 Ajax 请求。使用 Ajax 时需要注意可能存在跨域问题。
 
-```js
+```jsx
 // 动态创建 Image
 function preloadImage(url) {
   var img = new Image();
@@ -231,7 +231,7 @@ function preloadImage(url) {
 
   通过按需加载并显示最适合用户设备的图像，从而节省带宽和加快页面加载时间。
 
-  ```js
+  ```jsx
   <picture>  <source    srcset="hzfe-avatar-desktop.png, hzfe-avatar-desktop-2x.png 2x"    media="(min-width: 990px)"  />  <source    srcset="hzfe-avatar-tablet.png, hzfe-avatar-tablet-2x.png 2x"    media="(min-width: 750px)"  />  <img    srcset="hzfe-avatar.png, hzfe-avatar-2x.png 2x"    src="hzfe-avatar.png"    alt="hzfe-default-avatar"  /></picture>
   ```
 
