--- a/手撕代码/函数柯里化 - 手写实现.md
+++ b/手撕代码/函数柯里化 - 手写实现.md
@@ -3,7 +3,7 @@ date created: 2021-12-09 22:59
 date updated: 2021-12-17 11:58
 ---
 
-#编程题
+# 编程题
 
 ## 函数柯里化
 
@@ -29,7 +29,7 @@ function currying(fn, ...args){
 
 ## 实现 add()函数
 
-```js
+```jsx
 function add(...args1) {
   let allArgs = [...args1]
   
