--- a/手撕代码/发布订阅模式-手写实现.md
+++ b/手撕代码/发布订阅模式-手写实现.md
@@ -3,7 +3,7 @@ date created: 2021-12-09 23:00
 date updated: 2021-12-17 14:40
 ---
 
-#编程题 #Vue
+# 编程题 #Vue
 
 # 实现发布订阅模式
 
@@ -11,7 +11,7 @@ date updated: 2021-12-17 14:40
 
 ## 实现代码
 
-```js
+```jsx
 class EventEmitter {
   constructor() {
     this.cache = {}
