--- a/手撕代码/数组扁平化-手写实现.md
+++ b/手撕代码/数组扁平化-手写实现.md
@@ -2,7 +2,7 @@
 date created: 2021-12-09 22:57
 ---
 
-#编程题
+# 编程题
 
 # 实现数组扁平化
 
@@ -10,7 +10,7 @@ date created: 2021-12-09 22:57
 
 普通的递归思路, 通过循环递归调用方法, 一遍一遍遍历, 判断子项是否为数组, 则继续往下遍历. 利用递归程序的方法, 实现数组的每一项的连接:
 
-```js
+```jsx
 let arr = [1, [2, [3, 4, 5]]];
 function flatten(arr) {
   let result = [];
@@ -32,7 +32,7 @@ flatten(arr);  //  [1, 2, 3, 4，5]
 
 上面的递归方法可以看出是对数组的每一项进行处理, 那么也可以用reduce实现数组的拼接, 简化递归方法的代码
 
-```js
+```jsx
 let arr = [1, [2, [3, 4]]];
 function flatten(arr) {
     return arr.reduce(function(prev, next){
@@ -47,7 +47,7 @@ console.log(flatten(arr));//  [1, 2, 3, 4，5]
 
 使用扩展运算符和some方法搭配使用
 
-```js
+```jsx
 let arr = [1, [2, [3, 4]]];
 function flatten(arr) {
     while (arr.some(item => Array.isArray(item))) {
@@ -63,7 +63,7 @@ console.log(flatten(arr)); //  [1, 2, 3, 4，5]
 
 数组类型带有`toString` 方法, 可以结合两种方法把数组直接转换成都好分隔的字符串, 用 split 把字符串重新转化为数组:
 
-```js
+```jsx
 let arr = [1, [2, [3, 4]]];
 function flatten(arr) {
     return arr.toString().split(',');
@@ -76,7 +76,7 @@ console.log(flatten(arr)); //  [1, 2, 3, 4，5]
 
 直接调用 `Array.flat([depth])` , 其中 depth 是深度参数, 默认值是1, 即展开一层数组, 如果层数不确定, 参数可以传递 `Infinity`, 代表无限深层展开
 
-```js
+```jsx
 let arr = [1, [2, [3, 4]]];
 function flatten(arr) {
   return arr.flat(Infinity);
@@ -89,7 +89,7 @@ console.log(flatten(arr)); //  [1, 2, 3, 4，5]
 
 上述用了数组中的 toString 方法, 在方法内部仍然使用了 `JSON.stringify` 方法先将其转化为字符串, 我们可以手动实现这个效果:
 
-```js
+```jsx
 let arr = [1, [2, [3, [4, 5]]], 6];
 function flatten(arr) {
   let str = JSON.stringify(arr);
