--- a/算法/算法-将列表还原为树状结构.md
+++ b/算法/算法-将列表还原为树状结构.md
@@ -3,7 +3,7 @@ date created: 2021-12-09 22:59
 date updated: 2021-12-17 14:10
 ---
 
-#编程题
+# 编程题
 
 # 将列表还原为树状结构
 
@@ -35,9 +35,9 @@ date updated: 2021-12-17 14:10
 
 我们通常为次树状结构进行程序化处理后存储;
 
-## 典型题目:
+## 典型题目
 
-```js
+```jsx
 const list = [
   { pid: null, id: 1, data: '1'},
   { pid: 1, id: 2, data: '2-1'},
@@ -52,7 +52,7 @@ const list = [
 
 递归解法：该方法简单易懂，从根节点出发，每一轮迭代找到 pid 为当前节点 id 的节点，作为当前节点的 children，递归进行。
 
-```js
+```jsx
 function listToTree(
   list,
   pid = null,
@@ -72,11 +72,11 @@ function listToTree(
 }
 ```
 
-### 解法二:
+### 解法二
 
 迭代法：利用对象在 js 中是引用类型的原理。第一轮遍历将所有的项，将项的 id 与项自身在字典中建立映射，为后面的立即访问做好准备。 由于操作的每一项都是对象，结果集 root 中的每一项和字典中相同 id 对应的项实际上指向的是同一块数据。后续的遍历中，直接对字典进行操作，操作同时会反应到 root 中。
 
-```js
+```jsx
 function listToTree(
   list,
   rootId = null,
