--- a/算法/算法-连续区间.md
+++ b/算法/算法-连续区间.md
@@ -8,7 +8,7 @@ date created: 2021-12-09 22:59
 
 > 输入: 1,2,3,5,7,8,10 , 要求输出: 1~ ~3,5 7~ ~8,10
 
-```JS
+```jsx
 function calcContinuousRanges(arr) {
     let continuousRanges = [];
     let index = 0;
@@ -49,7 +49,7 @@ calcContinuousRanges([1,2,3,5,7,8,10]);
 >
 > **示例输出**：`["00:00~01:00", "02:00~02:30"]`
 
-```js
+```jsx
 function timeBitmapToRanges(timeBitmap) {
   let index = 0;
   let ranges = [];
