--- a/综合/关键渲染路径.md
+++ b/综合/关键渲染路径.md
@@ -2,8 +2,7 @@
 date created: 2022-07-05 23:56
 date updated: 2022-07-06 00:11
 ---
-
-> 本文由 [简悦 SimpRead](http://ksria.com/simpread/) 转码， 原文地址 [juejin.cn](https://juejin.cn/post/7116435880587296781)
+#browser 
 
 # 关键渲染路径
 
